--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,9 +27,10 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 5px;
-  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
           box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  padding-bottom: 20px;
+  padding-bottom: 0px;
+
   background: #fff;
   -webkit-animation: fadeup .5s .5s ease both;
           animation: fadeup .5s .5s ease both;
@@ -47,7 +48,7 @@ body {
   color: #fff;
   font-size: 40px;
   margin: 0;
-  padding: 50px 0;
+  padding: 50px 0px;
 }
 .upload .upload-files header p i {
   -webkit-transform: translateY(20px);
@@ -79,7 +80,8 @@ body {
 .upload .upload-files .body {
   text-align: center;
   padding: 50px 0;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
+  padding-left: 70px;
 }
 .upload .upload-files .body.hidden {
   display: none;
